Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53661

QDom internalSubset is never set

    XMLWordPrintable

Details

    • macOS
    • c3b959733a (qt/qtbase/dev) c3b959733a (qt/tqtc-qtbase/dev) acaed119e0 (qt/qtbase/6.4) acaed119e0 (qt/tqtc-qtbase/6.4) 96874f44e3 (qt/qtbase/6.3) 96874f44e3 (qt/tqtc-qtbase/6.3) 4912b7670a (qt/tqtc-qtbase/6.2) 4912b7670a (qt/tqtc-qtbase/6.2.5)

    Description

      The internalSubset is never set as you can see from the QDom.cpp.

      I assume, it should be set here.

      bool QDomDocumentPrivate::setContent(QXmlInputSource *source, QXmlReader *reader, QXmlSimpleReader *simpleReader, QString *errorMsg, int *errorLine, int *errorColumn)
      

      See the application attached, to see the issue:

      1. Change path to the xml file
      2. Run application
      3. internalSubset will return an empty string

      Also, it seems QDom is using an obsolete module.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            yeshanshan shanshany ye
            kileppal Kimmo Leppälä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes