Add QDom internalSubset implementation

QDom's internalSubset() always returned empty because nothing
actually set the internal data member it returns. When parsing
the DECLTYPE, extract the internal subset and save it to the
doctype()'s member when present.

Fixes: QTBUG-53661
Change-Id: I6e41ff8b914381168246073b3289d82205b1c255
Reviewed-by: Sona Kurazyan <sona.kurazyan@qt.io>
(cherry picked from commit c3b959733a739e9b2fc00b2af469fa44f3048e29)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>