src/xml/dom/qdomhelpers_p.h
@@ -113,6 +113,7 @@ public:
     bool startEntity(const QString &name);
     bool endEntity();
     bool startDTD(const QString &name, const QString &publicId, const QString &systemId);
+    bool parseDTD(const QString &dtd);
     bool comment(const QString &characters);
     bool externalEntityDecl(const QString &name, const QString &publicId, const QString &systemId);
     bool notationDecl(const QString &name, const QString &publicId, const QString &systemId);
@@ -129,6 +130,8 @@ public:
     int errorColumn;
 
 private:
+    QString dtdInternalSubset(const QString &dtd);
+
     QDomDocumentPrivate *doc;
     QDomNodePrivate *node;
     QXmlDocumentLocator *locator;
